<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
	<LinearLayout
	    android:id="@+id/LinearLayout2"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	
	    <Button
	        android:id="@+id/summaryButton"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:text="@string/summary"
	        android:textSize="12sp"
	        android:onClick="summary" />
	
	    <Button
	        android:id="@+id/newDemandButton"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="newDemand"
	        android:text="@string/newDemand"
	        android:textSize="12sp" />
	
	    <Button
	        android:id="@+id/myDemandsButton"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="myDemands"
	        android:text="@string/myDemands"
	        android:textSize="12sp" />
	</LinearLayout>
	
	<LinearLayout
	    android:id="@+id/LinearLayout3"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    <Button
	        android:id="@+id/logoutButton"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="logout"
	        android:text="@string/logout"
	        android:textSize="12sp" />
	
	    <Button
	        android:id="@+id/leaveButton"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_margin="0dp"
	        android:layout_weight="1"
	        android:onClick="leave"
	        android:text="@string/leave"
	        android:textSize="12sp" />
	
	</LinearLayout>
</LinearLayout>